question box style, html structure progress, wip

--- a/highscore.html
+++ b/highscore.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Code Quiz</title>
+    <title>High score</title>
   </head>
   <body>
     <header>
@@ -21,27 +21,6 @@
         <a class="nav-item" href="./highscore.html">High score</a>
       </nav>
     </header>
-    <!-- main container -->
-    <div class="container">
-      <div class="quiz-box" id="quiz-box">
-        <h1>Code Quiz</h1>
-        <div class="quiz-header">
-          <p id="question-progress">Question x of y</p>
-          <p id="timer">Time</p>
-        </div>
-        <p id="question">Question</p>
-        <div class="question-btn">
-          <button class="btn" id="btn-a">A. <span id="choice-a"></span></button>
-          <button class="btn" id="btn-b">B. <span id="choice-b"></span></button>
-          <button class="btn" id="btn-c">C. <span id="choice-c"></span></button>
-          <button class="btn" id="btn-d">D. <span id="choice-d"></span></button>
-        </div>
-        <hr />
-        <footer>
-          <p>Kate - Web developer</p>
-        </footer>
-      </div>
-    </div>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
