--- a/index.html
+++ b/index.html
@@ -10,15 +10,27 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Code Quiz</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- navbar container with home & high score links -->
-      <nav class="navbar-container">
-        <a class="nav-item" href="./index.html">Home</a>
-        <a class="nav-item" href="./highscore.html">High score</a>
+      <nav class="navbar-container box-row">
+        <a class="nav-item" href="./index.html"
+          ><i class="uil uil-estate"></i> Home</a
+        >
+        <a class="nav-item" href="./highscore.html"
+          ><i class="uil uil-rocket"></i> High score</a
+        >
       </nav>
     </header>
     <!-- main container -->
