start page & footer

--- a/highscore.html
+++ b/highscore.html
@@ -29,6 +29,33 @@
         >
       </nav>
     </header>
+    <main class="main" id="main"></main>
+    <!-- footer section -->
+    <footer class="main-footer" id="main-footer">
+      <div class="footer-container box-row">
+        <div class="footer-textbox">
+          <a
+            class="contact"
+            id="gh-profile"
+            href="https://github.com/katarzynajk"
+            target="_blank"
+          >
+            <i class="uil uil-github-alt"></i>
+            Visit my GitHub!
+          </a>
+          <a
+            class="contact"
+            id="email"
+            href="mailto:jarominyanni@gmail.com"
+            target="_blank"
+          >
+            <i class="uil uil-envelope-edit"></i>
+            Email me!
+          </a>
+        </div>
+        <div class="footer-text">&copy;2022 - Kate J-K</div>
+      </div>
+    </footer>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
