uncomplete js, working on js file

--- a/highscore.html
+++ b/highscore.html
@@ -41,7 +41,7 @@
             target="_blank"
           >
             <i class="uil uil-github-alt"></i>
-            Visit my GitHub!
+            GitHub Profile!
           </a>
           <a
             class="contact"
