--- a/index.html
+++ b/index.html
@@ -50,27 +50,31 @@
           <button class="startbtn start-btn" id="start-btn">Start</button>
         </div>
       </section>
+      <!--<div class="question-container">
+        <div class="quiz-box" id="quiz-box">
+          <h2>Code Quiz</h2>
+          <div class="quiz-header">
+            <p id="question-progress">Question x of y</p>
+            <p id="timer">Time</p>
+          </div>
+          <p id="question">Question</p>
+          <div class="question-btn">
+            <button class="btn" id="btn-a">
+              A. <span id="choice-a"></span>
+            </button>
+            <button class="btn" id="btn-b">
+              B. <span id="choice-b"></span>
+            </button>
+            <button class="btn" id="btn-c">
+              C. <span id="choice-c"></span>
+            </button>
+            <button class="btn" id="btn-d">
+              D. <span id="choice-d"></span>
+            </button>
+          </div>
+        </div>
+      </div>-->
     </main>
-    <!-- <div class="container">
-      <div class="quiz-box" id="quiz-box">
-        <h2>Code Quiz</h2>
-        <div class="quiz-header">
-          <p id="question-progress">Question x of y</p>
-          <p id="timer">Time</p>
-        </div>
-        <p id="question">Question</p>
-        <div class="question-btn">
-          <button class="btn" id="btn-a">A. <span id="choice-a"></span></button>
-          <button class="btn" id="btn-b">B. <span id="choice-b"></span></button>
-          <button class="btn" id="btn-c">C. <span id="choice-c"></span></button>
-          <button class="btn" id="btn-d">D. <span id="choice-d"></span></button>
-        </div>
-        <hr class="hr" />
-        <footer>
-          <p>Kate - Web developer</p>
-        </footer> -->
-      </div>
-    </div>
     <!-- footer section -->
     <footer class="main-footer" id="main-footer">
       <div class="footer-container box-row">
